<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="registerActivity"
            type="com.example.one_hotel.activities.RegisterActivity" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity">

        <include
            android:id="@+id/layoutLoading"
            layout="@layout/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:contentPadding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Registration"
                    android:textAlignment="center"
                    android:textColor="#9C8507"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Silahkan Daftarkan Diri Anda"
                    android:textAlignment="center"
                    android:textColor="#9C8507"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/hotel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="Email"
                    android:textColor="#FF4081"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="Masukkan Email"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="Fullname"
                    android:textColor="#FF4081"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="Masukkan Fullname"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="Username"
                    android:textColor="#FF4081"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="Masukkan Username"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="Password"
                    android:textColor="#FF4081"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#00FFFFFF"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:hint="Masukkan Password"
                        android:inputType="textPassword"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/ibtnVisibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="10dp"
                        android:background="#00FFFFFF"
                        android:src="@drawable/ic_baseline_visibility_off_24" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#FF4081"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:text="Daftar"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbPrivasi"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center|start"
                        android:text="DENGAN MENDAFTAR ANDA SETUJU TERKAIT PRIVASI"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:paddingStart="50dp"
                        android:paddingEnd="5dp"
                        android:text="Sudah Punya Akun?"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:gravity="center|start"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="0dp"
                        android:text="Masuk"
                        android:textAllCaps="false"
                        android:textColor="#2962FF"
                        android:textSize="10sp"
                        app:iconPadding="0dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>